@@ -3,10 +3,10 @@
  *==================================================
  */
 
-Timeline.GregorianDateLabeller.monthNames["en"] = [
+Timeline.GregorianDateLabeller.monthNames["pt_BR"] = [
     "Jan", "Fev", "Mar", "Abr", "Mai", "Jun", "Jul", "Ago", "Set", "Out", "Nov", "Dez"
 ];
 
-Timeline.GregorianDateLabeller.dayNames["en"] = [
+Timeline.GregorianDateLabeller.dayNames["pt_BR"] = [
     "Domingo", "Segunda", "Terça", "Quarta", "Quinta", "Sexta", "Sábado"
 ];
