@@ -4,6 +4,6 @@
  */
 
 Timeline.strings["pt_BR"] = {
-    wikiLinkLabel:  "Discuss"  // Using English until someone submits the pt_BR localization
+    wikiLinkLabel:  "Discutir"
 };
 
